	PR tree-optimization/87546 	* tree-vect-patterns.c (vect_look_through_possible_promotion): Add 	min_precision variable, initially set it to orig_precision, only does 	something if op_type's precision is <= min_precision and update 	min_precision whenever calling set_op.

* gcc.dg/vect/O3-pr87546.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@266237 138bc75d-0d04-0410-961f-82ee72b054a4